--- a/Workshops/ISPITNI-21-01-2025 - COURSE/backend/RS1_2024_25.API/appsettings.json
+++ b/Workshops/ISPITNI-21-01-2025 - COURSE/backend/RS1_2024_25.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "db1": "Server=.;Database=TARIK_ANES;Trusted_Connection=true;User ID=sa;Password=test;MultipleActiveResultSets=true;TrustServerCertificate=True"
+        "db1": "Server=.;Database=JAN25;Trusted_Connection=true;User ID=sa;Password=test;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
     "Logging": {
         "LogLevel": {
